# MinecraftChildSkinner

./: CMakeLists.txt  README.md
src/: main.cpp  utils.cpp  utils.hpp  video.cpp
