cmake_minimum_required(VERSION 2.8)
project(Analyse)
#add_custom_target(mytargetname ALL COMMAND ${CMAKE_COMMAND} -E make_directory ${directory})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
find_package( OpenCV REQUIRED )
#include_directories("/Locals/OpenCV-3.1.0/include")
add_executable( Analyse src/main.cpp src/utils.cpp)
target_link_libraries( Analyse ${OpenCV_LIBS} )
add_executable( Video src/video.cpp)
target_link_libraries( Video ${OpenCV_LIBS} )
